--- a/index.html
+++ b/index.html
@@ -5,47 +5,79 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Kokotov rep - digitalni menu</title>
 </head>
 <body>
-    <div class="container">
-        <div class="page-1">
-            <img src="assets/images/pngwing.com.png" alt="Kokot logo"
-                 class="kokot-logo">
-            <img src="assets/images/thomas-henry.png" alt="Thomas Henry logo"
-                 class="thomas-henry-logo">
-        </div>
-        <div class="page-2">
-
-        </div>
-        <div class="page-3">
-
-        </div>
-        <div class="page-4">
-
-        </div>
-        <div class="page-5">
-
-        </div>
-        <div class="page-6">
-
-        </div>
-        <div class="page-7">
-
-        </div>
-        <div class="page-8">
-
-        </div>
-        <div class="page-9">
-
-        </div>
-        <div class="page-10">
-
-        </div>
-        <div class="page-11">
-
-        </div>
+<nav class="navbar fixed-top navbar-light" style="opacity: 0.7; background-color: #87B2CA">
+    <a class="navbar-brand btn"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; width: 21%; margin-right: 0.21em !important; font-size: 100% !important;"
+       href="#page-2">
+        <strong>Kokteli</strong>
+    </a>
+    <a class="navbar-brand btn"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; width: 42%; margin-right: 0.21em !important; font-size: 100% !important;"
+       href="#page-3">
+        <strong>Alkoholna pića</strong>
+    </a>
+    <a class="navbar-brand btn"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; width: 35%; margin-right: 0 !important; font-size: 100% !important;"
+       href="#page-4">
+        <strong>Topli napitci</strong>
+    </a>
+</nav>
+<div class="container-2">
+    <div class="page-1">
+        <img src="assets/images/pngwing.com.png" alt="Kokot logo"
+             class="kokot-logo">
+        <img src="assets/images/thomas-henry.png" alt="Thomas Henry logo"
+             class="thomas-henry-logo">
     </div>
+    <div class="page-2">
+
+    </div>
+    <div class="page-3" id="page-2">
+
+    </div>
+    <div class="page-4">
+
+    </div>
+    <div class="page-5">
+
+    </div>
+    <div class="page-6" id="page-3">
+
+    </div>
+    <div class="page-7">
+
+    </div>
+    <div class="page-8">
+
+    </div>
+    <div class="page-9">
+
+    </div>
+    <div class="page-10">
+
+    </div>
+    <div class="page-11" id="page-4">
+
+    </div>
+</div>
 </body>
 </html>
