--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 <body>
 <nav class="navbar fixed-top navbar-light" style="opacity: 0.7; background-color: #87B2CA">
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; margin-left: 1vw !important; width: 21%; margin-right: 0.21em !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; padding-top: 10px; padding-bottom: 10px; margin-left: 1vw !important; width: 21%; margin-right: 0.21em !important; font-size: 100% !important;"
        href="#page-2">
         <strong>Kokteli</strong>
     </a>
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; width: 42%; margin-right: 0.21em !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; padding-top: 10px; padding-bottom: 10px; width: 42%; margin-right: 0.21em !important; font-size: 100% !important;"
        href="#page-3">
         <strong>Alkoholna pića</strong>
     </a>
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; width: 35%; margin-right: 1vw !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; padding-top: 10px; padding-bottom: 10px; width: 35%; margin-right: 1vw !important; font-size: 100% !important;"
        href="#page-4">
         <strong>Topli napitci</strong>
     </a>
