--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Kokotov rep - digitalni menu</title>
 </head>
 <body>
-<nav class="navbar fixed-top navbar-light" style="opacity: 0.7; background-color: #87B2CA">
+<nav class="navbar fixed-top navbar-light" style="opacity: 0.7; background-color: #91B387">
     <a class="navbar-brand btn"
        style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; padding-top: 10px; padding-bottom: 10px; margin-left: 1vw !important; width: 21%; margin-right: 0.21em !important; font-size: 100% !important;"
        href="#page-2">
