--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
     <title>Kokotov rep - digitalni menu</title>
 </head>
 <body>
-<nav class="navbar fixed-top navbar-light" style="opacity: 0.7; background-color: #91B387">
+<nav class="navbar fixed-top navbar-light" style="opacity: 0.7; background-color: #87B2CA">
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; padding-top: 10px; padding-bottom: 10px; margin-left: 1vw !important; width: 21%; margin-right: 0.21em !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; width: 30%; margin-right: 0.21em !important; font-size: 100% !important;"
        href="#page-2">
-        <strong>Kokteli</strong>
+        <img src="assets/images/cocktail-32.png" alt="Kokteli" class="navbar-images">
     </a>
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; padding-top: 10px; padding-bottom: 10px; width: 42%; margin-right: 0.21em !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; width: 30%; margin-right: 0.21em !important; font-size: 100% !important;"
        href="#page-3">
-        <strong>Alkoholna pića</strong>
+        <img src="assets/images/liquor.png" alt="Alkoholna pića" class="navbar-images">
     </a>
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; padding-top: 10px; padding-bottom: 10px; width: 35%; margin-right: 1vw !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; padding: 5px; width: 30%; margin-right: 0 !important; font-size: 100% !important;"
        href="#page-4">
-        <strong>Topli napitci</strong>
+        <img src="assets/images/coffee-32.png" alt="Topli napitci" class="navbar-images">
     </a>
 </nav>
 <div class="container-2">
