--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 <body>
 <nav class="navbar fixed-top navbar-light" style="opacity: 0.7; background-color: #87B2CA">
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; height: inherit; padding: 5px; width: 30%; margin-right: 0.21em !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; height: inherit; width: 30%; margin-right: 0.21em !important; font-size: 100% !important;"
        href="#page-2">
         <img src="assets/images/cocktail-32.png" alt="Kokteli" class="navbar-images">
     </a>
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; height: inherit; padding: 5px; width: 30%; margin-right: 0.21em !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; height: inherit; width: 30%; margin-right: 0.21em !important; font-size: 100% !important;"
        href="#page-3">
         <img src="assets/images/liquor.png" alt="Alkoholna pića" class="navbar-images">
     </a>
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; height: inherit; padding: 5px; width: 30%; margin-right: 0 !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; height: inherit; width: 30%; margin-right: 0 !important; font-size: 100% !important;"
        href="#page-4">
         <img src="assets/images/coffee-32.png" alt="Topli napitci" class="navbar-images">
     </a>
