--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="assets/images/liquor.png" alt="Alkoholna pića" class="navbar-images">
     </a>
     <a class="navbar-brand btn"
-       style="border: 3px solid gray; background-color: #D9D0BF; height: inherit; width: 30%; margin-right: 0 !important; font-size: 100% !important;"
+       style="border: 3px solid gray; background-color: #D9D0BF; height: inherit; vertical-align: middle; width: 30%; margin-right: 0 !important; font-size: 100% !important;"
        href="#page-4">
         <img src="assets/images/coffee-32.png" alt="Topli napitci" class="navbar-images">
     </a>
