--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Kokotov rep - digitalni menu</title>
 </head>
 <body>
-<nav class="navbar fixed-top navbar-light" style="opacity: 0.7; background-color: #87B2CA">
+<nav class="navbar fixed-top navbar-light" style="opacity: 0.8; background-color: #D9D0BF">
     <a class="navbar-brand btn"
        style="border: 3px solid gray; background-color: #D9D0BF; height: fit-content; width: 30%; margin-left: 1vw !important; margin-right: 0.21em !important; font-size: 100% !important;"
        href="#page-2">
