--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </nav>
 <div class="container-2">
     <div class="page-1">
-        <img src="assets/images/pngwing.com.png" alt="Kokot logo"
+        <img src="assets/images/logo.jpeg" alt="Kokot logo"
              class="kokot-logo">
         <img src="assets/images/thomas-henry.png" alt="Thomas Henry logo"
              class="thomas-henry-logo">
